# osxscreencapture

./: Makefile.am  README  gstscreencapturesrc.h  gstscreencapturesrc.m  plugin.m
gst-screencast-osx.xcodeproj/: project.pbxproj
